# my-first-clap-plugin

./: .gitignore  CMakeLists.txt  setup.sh
scripts/: setup.py
src/: entry_point.cpp
